# magi-core

./: .env.example  .gitignore  AGENTS.md  README.md  compose.dev.yaml  compose.yaml  magi.yaml  pending_tasks.md  pyproject.toml  spec.md  specs-oauth.md  tmp_test.py  webui-spec.md
.github/workflows/: test.yml
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.sisyphus/: boulder.json
.sisyphus/plans/: frontend-webui-improvements.md  webui-hardening.md  webui-spec-alignment.md  webui.md
backend/: Dockerfile
config/: bad_logging.conf  logging.conf
docs/: DOC_FOR_GENERATE_REQUIREMENTS.md  MAGI-System_Plugin-Based-AI-Driven-Development-Architecture.md.md  configuration_migration.md  plugin_developer_guide.md  production_guide.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/mock/: dashboard.html
frontend/src/: App.tsx  styles.css  types.ts  utils.ts
plugins/magi-cc-sdd-plugin/: plugin.yaml
scripts/: setup.sh
src/magi/: __init__.py  __main__.py  errors.py  models.py
templates/: vote_prompt.yaml  vote_schema.json
tests/: __init__.py
tests/e2e/: mock_session.spec.ts  playwright.config.ts  settings_persistence.spec.ts
tests/integration/: test_consensus_regression.py  test_docs_existence.py  test_end_to_end.py  test_plugin_loader_production_mode.py  test_webui_e2e.py  test_webui_production_mode.py
tests/property/: __init__.py  test_command_parsing.py  test_config_properties.py  (+8 more)
webui_mock/: dashboard.html  index.html  styles.css
(+164 files in other folders)
