[project]
name = "magi"
version = "0.1.0"
description = "MAGIシステム - 3賢者による合議プロセスを通じた多角的判断を提供するCLIツール"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "MAGI Team" }
]
keywords = ["ai", "cli", "consensus", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.39.0",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
    "hypothesis>=6.115.0",
    "pytest>=8.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
magi = "magi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magi"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.coverage.run]
source = ["src/magi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
